tests/parser/switch/invalid_break.m
% (c) Copyright 2019 Florian Schanda

switch potato
   case 1
      x = 1;
      break;
   case 2
      x = 2;
      break;
end
